@@ -1,6 +1,8 @@
 ﻿IMPROVEMENTS / FIXES
 - General:
 	- Archive the defunct KSPedia files, reducing the size of the BDArmory zip file by around 24MB.
+- AI:
+	- Smoothly vary the roll target during gain alt behaviour from the surface normal to vertical to avoid clipping wings into terrain when taking off on uneven terrain.
 - Vessel Spawning:
 	- Adjust intra-team spacing to scale better with distance.
 	- Fix the inward/outward facing direction when spawning teams and use the same facing direction for all members of a team.
